--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head> 
- <title> Table of contents <title>
+    <title> Table of contents </title>
 </head>  
   <body> 
    <h1> Hello </h1> 
-      Hello 
+      Hello hi
   </body> 
   
 </html> 
