--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-<head> 
+ <head> 
+     <link rel="stylesheet" href="assets/css/main.css">
     <title> Table of contents </title>
-</head>  
-  <body> 
-   <h1> Hello </h1> 
-      Hello hi
-  </body> 
+ </head>
+    <body>
+     <h1> Hello </h1>
+        <br>
+        <br>
+        <br>
+    Hello hi &amp; hello
+        <br>
+    </body> 
   
 </html> 
