--- a/Poems/Index.html
+++ b/Poems/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Styles Conference</title>
+        <title>Web Design Poems</title>
         <link href="main.css" rel="stylesheet">
     </head>
         <header class="container">
@@ -10,95 +10,104 @@
                 Web Design Poems
             </h1>
             <h3> 
-            Deidra Higgins
+                Deidra Higgins
             </h3>
-            
-        <h2 class= "poems">
             <br>
-            <br>
-            <aside class="level1">
-            <a href="level1pt1.html"> Level 1.1</a>
-            <br>
-            <br>
-            <a href="level1pt2.html"> Level 1.2</a>
-            <br>
-            <br>
-            <a href="level1pt3.html"> Level 1.3</a>
-            <br>
-            <br>
-            <a href="level1pt4.html"> Level 1.4</a>
-            <br>
-            <br>
-            <a href="level1pt5.html"> Level 1.5</a>
-            </aside>
-            <br>
-            <br>
-            <aside class= "level2">
-            <a href="level2pt1.html"> Level 2.1</a>
-            <br>
-            <br>
-            <a href="level2pt2.html"> Level 2.2</a>
-            <br>
-            <br>
-            <a href="level2pt3.html"> Level 2.3</a>
-            <br>
-            <br>
-            <a href="level2pt4.html"> Level 2.4</a>
-            <br>
-            <br>
-            <a href="level2pt5.html"> Level 2.5</a>
-            </aside>
-            <br>
-            <br>
-            <aside class="level3">
-            <a href="level3pt1.html"> Level 3.1</a>
-            <br>
-            <br>
-            <a href="level3pt2.html"> Level 3.2</a>
-            <br>
-            <br>
-            <a href="level3pt3.html"> Level 3.3</a>
-            <br>
-            <br>
-            <a href="level3pt4.html"> Level 3.4</a>
-            <br>
-            <br>
-            <a href="level3pt5.html"> Level 3.5</a>
-            </aside>
-            <br>
-            <br>
-            <aside class="level4">
-            <a href="level4pt1.html"> Level 4.1</a>
-            <br>
-            <br>
-            <a href="level4pt2.html"> Level 4.2</a>
-            <br>
-            <br>
-            <a href="level4pt3.html"> Level 4.3</a>
-            <br>
-            <br>
-            <a href="level4pt4.html"> Level 4.4</a>
-            <br>
-            <br>
-            <a href="level4pt5.html"> Level 4.5</a>
-            </aside>
-            <br>
-            <br>
-            <aside class="level5">
-            <a href="level5pt1.html"> Level 5.1</a>
             <br> 
-            <br>
-            <a href="level5pt2.html"> Level 5.2</a>
-            <br>
-            <br>
-            <a href="level5pt3.html"> Level 5.3</a>
-            <br>
-            <br>
-            <a href="level5pt4.html"> Level 5.4</a> 
-            <br>
-            <br>
-            <a href="level5pt5.html"> Level 5.5</a>
-            </aside>
+    <body>
+        <section class="level1">
+            <h2>
+                <a href="level1pt1.html"> Level 1.1</a>
+                <br>
+                <br>
+                <a href="level1pt2.html"> Level 1.2</a>
+                <br>
+                <br>
+                <a href="level1pt3.html"> Level 1.3</a>
+                <br>
+                <br>
+                <a href="level1pt4.html"> Level 1.4</a>
+                <br>
+                <br>
+                <a href="level1pt5.html"> Level 1.5</a>
             </h2>
+        </section>
+        <br>
+        <br>
+        <section class= "level2">
+            <h2>
+                <a href="level2pt1.html"> Level 2.1</a>
+                <br>
+                <br>
+                <a href="level2pt2.html"> Level 2.2</a>
+                <br>
+                <br>
+                <a href="level2pt3.html"> Level 2.3</a>
+                <br>
+                <br>
+                <a href="level2pt4.html"> Level 2.4</a>
+                <br>
+                <br>
+                <a href="level2pt5.html"> Level 2.5</a>
+            </h2>
+        </section>
+        <br>
+        <br>
+        <section class="level3">
+            <h2>
+                <a href="level3pt1.html"> Level 3.1</a>
+                <br>
+                <br>
+                <a href="level3pt2.html"> Level 3.2</a>
+                <br>
+                <br>
+                <a href="level3pt3.html"> Level 3.3</a>
+                <br>
+                <br>
+                <a href="level3pt4.html"> Level 3.4</a>
+                <br>
+                <br>
+                <a href="level3pt5.html"> Level 3.5</a>
+            </h2>
+        </section>
+        <br>
+        <br>
+        <section class="level4">
+            <h2>
+                <a href="level4pt1.html"> Level 4.1</a>
+                <br>
+                <br>
+                <a href="level4pt2.html"> Level 4.2</a>
+                <br>
+                <br>
+                <a href="level4pt3.html"> Level 4.3</a>
+                <br>
+                <br>
+                <a href="level4pt4.html"> Level 4.4</a>
+                <br>
+                <br>
+                <a href="level4pt5.html"> Level 4.5</a>
+            </h2>
+        </section>
+        <br>
+        <br>
+        <section class="level5">
+            <h2>
+                <a href="level5pt1.html"> Level 5.1</a>
+                <br>
+                <br>
+                <a href="level5pt2.html"> Level 5.2</a>
+                <br>
+                <br>
+                <a href="level5pt3.html"> Level 5.3</a>
+                <br>
+                <br>
+                <a href="level5pt4.html"> Level 5.4</a> 
+                <br>
+                <br>
+                <a href="level5pt5.html"> Level 5.5</a>
+            </h2>
+        </section>
+            </body>
     </header>
 </html>
