--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html>
 
  <head> 
-     <link rel="stylesheet" href="assets/css/main.css">
+     <link rel="stylesheet" href="main.css">
     <title> Table of contents </title>
  </head>
     <body>
-     <h1> Hello </h1>
-        <br>
-        <br>
-        <br>
-    Hello hi &amp; hello
-        <br>
+        <nav class= "container">
+            <div class="title">
+     <h1> Deidra Higgins </h1>
+                </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="list">
+        <ul>
+            <li> <a href="Website/Index.html">Website</a></li>
+            <li> <a href="Poems/index.html"> Poems</a></li>
+            <li> <a href="Drawing/blind.html">Drawing 1</a></li>
+            <li> <a href="Drawing/greed.html">Drawing 2</a></li>
+            </ul>
+            </div>
+        </nav>
     </body> 
   
 </html> 
